# gst-device-monitor

./: CMakeLists.txt  main.cpp
